# starlark-rust

./: .travis.yml  AUTHORS  Cargo.toml  README.md  build.rs  lib.rs  main.rs  rustfmt.toml
.ci/: build.sh  release.sh  setup.sh
environment/: mod.rs
eval/: mod.rs  repl.rs  simple.rs  testutil.rs
src/: lib.rs  main.rs
src/environment/: mod.rs
src/eval/: interactive.rs  mod.rs  repl.rs  tests.rs  testutil.rs
src/stdlib/: dict.rs  list.rs  macros.rs  mod.rs  string.rs
src/syntax/: ast.rs  grammar.lalrpop  grammar.tests.rs  lexer.rs  mod.rs  parser.rs  testutil.rs
src/syntax/testcases/: archive.bzl  bazel_py_integration_test.bzl  cover.bzl  csharp.bzl  link.bzl  redirects.bzl  remote.bzl  single_output_test.bzl  transitive_maven_jar.bzl  vet.bzl
src/values/: dict.rs  function.rs  list.rs  mod.rs  string.rs  tuple.rs
starlark/: Cargo.toml  README.md  build.rs
starlark-repl/: Cargo.toml  README.md
starlark-repl/src/: lib.rs  main.rs
starlark-repl/tests/: integration.rs
starlark-test/: Cargo.toml  build.rs
starlark-test/benches/: rust_benches.rs
starlark-test/benches/rust-benches/: bubble_sort.sky  globals.sky  integer_add.sky  list.sky  list_append.sky  named_args.sky
starlark-test/src/: lib.rs
starlark-test/tests/: go_conformance_tests.rs  java_conformance_tests.rs  rust_tests.rs
starlark-test/tests/go-testcases/: assign.sky  builtins.sky  control.sky  dict.sky  function.sky  list.sky  misc.sky  string.sky
starlark-test/tests/java-testcases/: int.sky  int_constructor.sky
starlark-test/tests/rust-testcases/: bool.sky  compr.sky  control.sky  freeze.sky  freeze_function.sky  inspect.sky  josharian_fuzzing.sky  module.sky  range.sky  regression.sky  string.sky  struct.sky
starlark/benches/: rust_benches.rs
starlark/benches/benchutil/: mod.rs
starlark/benches/rust-benches/: empty.sky
starlark/examples/: starlark-simple-cli.rs
starlark/src/: lib.rs  testutil.rs
starlark/src/environment/: bin_op.rs  mod.rs
starlark/src/eval/: call_stack.rs  compiler.rs  compr.rs  def.rs  expr.rs  globals.rs  interactive.rs  locals.rs  mod.rs  module.rs  noload.rs  simple.rs  stmt.rs  tests.rs  testutil.rs
starlark/src/gc/: mod.rs  tests.rs
starlark/src/linked_hash_set/: mod.rs  set_impl.rs  stdlib.rs  value.rs
starlark/src/stdlib/: dict.rs  freeze.rs  inspect.rs  list.rs  macros.rs  mod.rs  string.rs  structs.rs
starlark/src/stdlib/macros/: mod.rs  param.rs  signature.rs
starlark/src/syntax/: ast.rs  dialect.rs  errors.rs  fmt.rs  grammar.lalrpop  grammar.tests.rs  grammar_tests.rs  lexer.rs  mod.rs  parser.rs  testutil.rs
starlark/src/syntax/testcases/: bazel_hash_dict.bzl  bazel_java_integration_test.bzl  e4b_aspect.bzl  eclipse.bzl  files_equal_test.bzl  go_toolchain.bzl  library.bzl  list.bzl  repository_tools.bzl  rust.bzl  stdlib.bzl
starlark/src/values/: boolean.rs  context.rs  dict.rs  error.rs  frozen.rs  function.rs  hashed_value.rs  immutable.rs  inspect.rs  int.rs  interop.rs  iter.rs  list.rs  mod.rs  mutability.rs  mutable.rs  none.rs  range.rs  slice_indices.rs  string.rs  tuple.rs
starlark/src/values/cell/: error.rs  header.rs  mod.rs
starlark/src/values/string/: interpolation.rs  mod.rs  rc.rs
starlark/tests/: README.md  example.rs  go_conformance_tests.rs  java_conformance_tests.rs  rust_tests.rs
starlark/tests/go-testcases/: assign.sky  bool.sky  builtins.sky  int.sky  misc.sky  string.sky  struct.sky
starlark/tests/java-testcases/: min_max.sky
starlark/tests/rust-testcases/: bool.sky  dict.sky  int.sky  josharian_fuzzing.sky  mutation_during_iteration.sky  regression.sky  string.sky
starlark/tests/testutil/: mod.rs
stdlib/: dict.rs  list.rs  macros.rs  mod.rs  string.rs
syntax/: ast.rs  errors.rs  grammar.lalrpop  grammar.tests.rs  lexer.rs  mod.rs  parser.rs  testutil.rs
syntax/testcases/: README.md  action.bzl  asm.bzl  aspect.bzl  bazel_integration_test.bzl  bazel_tests.bzl  binary.bzl  bindata.bzl  cgo.bzl  common.bzl  compile.bzl  compiler.bzl  eclipse_platform.bzl  embed_data.bzl  gazelle.bzl  generate_test.bzl  generate_workspace.bzl  go_proto_library.bzl  go_repository.bzl  info.bzl  jekyll.bzl  lines_sorted_test.bzl  mode.bzl  pack.bzl  path.bzl  popular_repos.bzl  prefix.bzl  providers.bzl  repositories.bzl  site.bzl  source.bzl  test.bzl  toolchain.bzl  toolchains.bzl  wrappers.bzl
tests/: conformance_test.rs  go_conformance_tests.rs  java_conformance_tests.rs
tests/go-testcases/: bool.sky  builtins.sky  dict.sky  list.sky  misc.sky  string.sky  tuple.sky
tests/java-testcases/: min_max.sky  string_format.sky
tests/testcases/: README.md  all_any.sky  int.sky  list_slices.sky  min_max.sky  string_format.sky
tests/testutil/: mod.rs
values/: dict.rs  function.rs  list.rs  mod.rs  string.rs  tuple.rs
