[package]
name = "starlark"
version = "0.1.0"
authors = ["Damien Martin-Guillerez <dmarting@google.com>"]
build = "build.rs"

description = "An implementation in Rust of the Starlark language."
# TODO(damienmg): publish the documentation on docs-rs.
# documentation = "..."
homepage = "https://github.com/google/starlark-rust"
repository = "https://github.com/google/starlark-rust"
readme = "README.md"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
categories = ["development-tools"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "google/starlark-rust", branch = "master" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
lalrpop = "0.15.2"

[dependencies]
codemap = "0.1.1"
codemap-diagnostic = "0.1"
getopts = "0.2"
lalrpop-util = "0.15.2"
linked-hash-map = "0.5.1"
linefeed = "0.5.1"

[lib]

[[bin]]
name = "starlark"

[features]
trace = []
