[package]
name = "starlark-repl"
edition = "2018"
version = "0.3.1-pre"
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
]

description = "A REPL for the implementation in Rust of the Starlark language."
documentation = "https://docs.rs/crate/starlark-repl"
homepage = "https://github.com/google/starlark-rust"
repository = "https://github.com/google/starlark-rust"
readme = "README.md"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
categories = ["development-tools"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "google/starlark-rust", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
codemap = "0.1.1"
codemap-diagnostic = "0.1.1"
linefeed = "0.5.3"
starlark = { path = "../starlark" }
structopt = "0.3.0"

[dev-dependencies]
assert_cmd = "0.10.2"
predicates = "1"
# 3.0.5 bumps rand to 0.6 which causes problems with other deps.
tempfile = ">=3, <3.0.5"

[lib]
bench = false

[[bin]]
name = "starlark-rust"
bench = false
path = "bin/starlark-rust.rs"
