[package]
name = "starlark-test"
edition = "2018"
version = "0.0.0"
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
]
build = "build.rs"
publish = false

description = "Tests for starlark crate."
documentation = "https://docs.rs/crate/starlark"
homepage = "https://github.com/google/starlark-rust"
repository = "https://github.com/google/starlark-rust"
readme = "README.md"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
categories = ["development-tools"]
license = "Apache-2.0"

[dependencies]
starlark = { path = "../starlark" }
codemap = "0.1.1"
codemap-diagnostic = "0.1.1"
linked-hash-map = "0.5.1"

[lib]
bench = false
test = false
doctest = false
doc = false
